<resources>
    <string name="app_name">SulabhInternational</string>
    <string name="facebook_app_id">1345871815464355</string>
    <string name="fb_login_protocol_scheme">fb1345871815464355</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_open">Open</string>
    <string name="founder">FOUNDER</string>
    <string name="social_ini">Socail Initiatives taken by Sulabh:</string>
    <string name="social_content">-Liberation of Scavengers\n-Vocational of training programme\n
        -Education ofchildren of scavengers\n-Public Awareness\n-Nai Disha</string>
    <string name="princess">Meet New Princess of Alwar</string>
    <string name="home_first">Sociologist, social activist, and Founder of
        Sulabh Sanitation and Social Reform Movement,
        Dr. Pathak believes the toilet is a tool for social change.
        He has received a great deal of national and international
        recognition for his work, including the Stockholm Water Prize in 2009,
        and he is considered a pioneer for social reform.</string>
    <string name="news_and_events">News and Events</string>
    <string name="meet_sulabh">Meet Sulabh</string>
    <string name="detail">Sulabh International Social Service Organisation, a non-profit voluntary social
        organisation founded in 1970 by Dr. Bindeshwar Pathak, is dedicated to Gandhian ideology of
        emancipation of scavengers.</string>
    <string name="stay_touch">Stay In Touch</string>
    <string name="sulabh_org">Sulabh International Social Service Organisation</string>
    <string name="line1">Sulabh Gram, Mahavir Enclave,</string>
    <string name="line2">Palam-Dabri Road,</string>
    <string name="line3">New Delhi- 110045</string>
    <string name="line4"><![CDATA[Phone: +91.11.25031518 & 25031519, 25057748]]></string>
    <string name="line5">Email: sulabhinfo@gmail.com</string>
    <string name="awards_and_honor">Awards and Honor</string>
    <string name="waste">Waste Water Treatment Plant</string>
    <string name="water_detail">The organization Sulabh International has successfully demonstrated treatment of
        waste water based on usage of duckweed in rural and urban areas with direct economic returns</string>
    <string name="manual_scavenging">MANUAL SCAVENGING</string>
    <string name="what">What is manual scavenging?</string>
    <string name="what_ms_ans">Scavenging is the practice of manual cleaning of human excreta from service/ dry
        latrines. The scavengers crawl into the dry latrines and collect the human excreta with their bare hands,
        carry it as head-load in a container to dispose it off.

A caste based and hereditary profession, which is handed down, as a legacy from one generation to the next; “manual
        scavenging” has been an age-old routine for this community, which is untouched by technological advancement
        in sanitary practices. Not only does the prevalence of this culture seem antediluvian, but what is worse is
        the fact that those born in this community are considered agents of pollution due to their background of social
        hierarchy, based on birth. They are the most oppressed and suppressed class of Indian society – hated, ostracized,
        vilified and avoided by all other castes and classes. The appalling hardship, humiliation and exploitation they
        face, have no parallel in human history. The practice started in the Pauranic period continued in the Buddhist,
        Mauryan, Mughal and British periods.
Scavengers come in direct contact with human excreta and his/her hands are completely soiled. In a congested locality,
        the scavenger has to crawl through a narrow passage, pushing the basket with one hand, resting his body weight
        on the other to make his way up to the latrine chamber through a narrow opening.  In the latrine, where the seat
        is deep inside, he/she has to stretch his hand to the fullest and thrust his/her head into the hole to clean the
        toilet. The scavenger has to bend forward into the narrow space to clean excreta from the toilet antechambers. In
        latrines, which have no receptacles, human excreta drops directly on the floor, which, with passage of time, wears
        the brickwork that becomes patchy and uneven. In most cases, the sidewalls are also without cement plaster; with
        the result, the excreta get stuck up everywhere on the sidewalls and also on the floor. The scavenger, while cleaning,
        has to scratch the floor and sidewalls to do maximum cleaning.  It is a common sight to see scavengers, mostly women,
        moving with excreta on the head, stored in bamboo-baskets, or in leaking drums, with the muck trickling down over face
        and body. Passers-by avoid such persons. If a scavenger comes in close proximity, he or she is showered with a hail
        of abuse. In many places, latrines are so constructed that the users do not even see their own excreta. They simply
        squat, perform, and go away without even caring to know who cleans their toilets. No human degradation could be more
        cruel and inhuman than the one suffered by scavengers.

</string>
    <string name="cleaning_of_ghats">CLEANING OF GHATS</string>
    <string name="clean_text">Photo essay | Bringing life back to the ‘ghats’</string>
    <string-array name="news_heading">

        <item>“SULABH TOWARDS VILLAGES” CAMPAIGN LAUNCHED IN JAUNPUR</item>
        <item>Sulabh hands over 5 toilets to village folk in Jaunpur – The Times of India</item>
        <item>Uttar Pradesh: NGO Sulabh launches rural sanitation campaign</item>
        <item>गांधी के बाद मोदी ने दी शौचालय को तरजीह : ¨वदेश्वर</item>

    </string-array>
    <string-array name="news_detail">

        <item>Posted December 5th, 2016 by Sulabh Admin and filed under In the Press, India,
            Press Releases, Sulabh News, Uttar Pradesh.</item>
        <item>Posted December 4th, 2016 by Sulabh Admin and filed under In the Press, India,
            Press Releases, Sulabh News, Uttar Pradesh.</item>
        <item>Posted December 4th, 2016 by Sulabh Admin and filed under In the Press, India,
            Press Releases, Sulabh News, Uttar Pradesh.</item>
        <item>Posted December 4th, 2016 by Sulabh Admin and filed under Articles, In the Press, India,
            Press Releases, Sulabh News, Uttar Pradesh.</item>

    </string-array>
</resources>