<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="com.example.arif.sulabhinternational.Fragments.Contact">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/contact_head"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/meet_sulabh"
        android:textColor="#000000"
        android:padding="10dp"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/meet"
        android:text="@string/detail"
        android:layout_below="@+id/contact_head"
        android:textColor="@color/colorPrimaryText"/>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:gravity="center_horizontal"
    android:text="@string/stay_touch"
    android:textColor="#000000"
    android:id="@+id/stay"
    android:textSize="20sp"
    android:textStyle="bold"
    android:layout_below="@+id/meet"
    android:padding="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/stay_detail"
        android:textColor="@color/colorPrimaryText"
        android:layout_below="@+id/stay"
        android:text="@string/sulabh_org"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/stay_line1"
        android:text="@string/line1"
        android:textColor="@color/colorPrimaryText"
        android:layout_below="@+id/stay_detail"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/stay_line2"
        android:text="@string/line2"
        android:textColor="@color/colorPrimaryText"
        android:layout_below="@+id/stay_line1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/stay_line3"
        android:text="@string/line3"
        android:textColor="@color/colorPrimaryText"
        android:layout_below="@+id/stay_line2"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/stay_line4"
        android:text="@string/line4"
        android:textColor="@color/colorPrimaryText"
        android:layout_below="@+id/stay_line3"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/stay_line5"
        android:text="@string/line5"
        android:textColor="@color/colorPrimaryText"
        android:layout_below="@+id/stay_line4"/>
</RelativeLayout>
