<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="com.example.arif.sulabhinternational.Fragments.ManualScavenging">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:descendantFocusability="blocksDescendants"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/ms_header"
            android:padding="10dp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:text="@string/manual_scavenging"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ms_what"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_below="@+id/ms_header"
            android:text="@string/what"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <com.ms.square.android.expandabletextview.ExpandableTextView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
            android:id="@+id/expand_what_ans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ms_what"
            expandableTextView:animDuration="200"
            expandableTextView:maxCollapsedLines="4">

            <TextView
                android:id="@id/expandable_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#666666"
                android:textSize="12sp" />

            <ImageButton
                android:id="@id/expand_collapse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"
                android:background="@android:color/transparent"
                android:padding="16dp" />
        </com.ms.square.android.expandabletextview.ExpandableTextView>

        <ImageView
            android:id="@+id/ms_img1"
            android:padding="10dp"
            android:layout_width="130dp"
            android:layout_marginRight="20dp"
            android:layout_height="100dp"
            android:layout_below="@+id/expand_what_ans"
            android:background="@drawable/mansvn" />

        <ImageView
            android:id="@+id/ms_img2"
            android:layout_width="130dp"
            android:layout_height="100dp"
            android:layout_marginRight="20dp"
            android:layout_toRightOf="@+id/ms_img1"
            android:padding="10dp"
            android:layout_toEndOf="@+id/ms_img1"
            android:layout_below="@+id/expand_what_ans"
            android:background="@drawable/mnscvng" />


        <TextView
            android:id="@+id/socail_head"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ms_img1"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/social_ini"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/social_content"
            android:id="@+id/socail_content"
            android:layout_marginRight="30dp"
            android:layout_below="@+id/socail_head"
            android:textColor="@color/colorPrimaryText"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/princess"
            android:id="@+id/princess"
            android:layout_below="@+id/socail_content"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp"
            android:padding="10dp"
            android:textStyle="bold|italic"/>
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ms_recycler"
            android:layout_below="@+id/princess"/>


    </RelativeLayout>
</ScrollView>
