<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.arif.sulabhinternational.Fragments.Home">

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:descendantFocusability="blocksDescendants"
        android:layout_height="wrap_content"
        >

        <!-- TODO: Update blank fragment layout -->
        <RelativeLayout
            android:id="@+id/lay1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/home_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:text="@string/founder"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/home_image"
                android:layout_width="90dp"
                android:layout_height="100dp"
                android:layout_below="@+id/home_header"
                android:layout_marginTop="19dp"
                android:background="@drawable/drpathak" />

            <TextView
                android:id="@+id/home_first"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_alignTop="@+id/home_image"
                android:layout_marginLeft="19dp"
                android:layout_toEndOf="@+id/home_image"
                android:layout_toRightOf="@+id/home_image"
                android:text="@string/home_first"
                android:textColor="@color/colorPrimaryText"
                android:textSize="11sp" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/lay2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/home_newshead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/news_and_events"
                android:textColor="@color/colorPrimaryText"
                android:textSize="15sp"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/home_newshead" />


        </RelativeLayout>


    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
